# TwiceSignal

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/signaltwice/: __init__.py  diagnose.py  logging.py  preprocessor.py  task.py
src/signaltwice/core/: configLoader.py  interface.py  protocol.py  reader.py  types.py  utils.py  writer.py
src/signaltwice/engine/: __init__.py  defaults.py  plotter.py  registry.py
src/signaltwice/strategy/: __init__.py  basic_info.py  parameter.py  reader.py  report.py  visualizer.py  writer.py
src/signaltwice/task/: defaultParameter.py  encode.py  getBasicInfo.py  missValue.py  normalizer.py  reportSection.py  visualizer.py
tests/: test_diagnose.py
